# trust-substrate-os

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: apprentice-flow.html  apprentice-surface.html  flow-data.js  flow.json  orbital-map.html  satellite-factory.html  satellite-factory.md  satellites-data.js  satellites.json  shape-of-trust-reconciliation.md  solar-map.html  sun.json
examples/: demo.py
scripts/: export-flow-snapshot.py  export-satellite-snapshot.py  update-sun.sh
src/trust_substrate/: __init__.py  capacity.py  engine.py  fakes.py  flow.py  gates.py  graduation.py  metrics.py  models.py  offers.py  predictions.py  receipts.py  routing.py  satellite_fakes.py  satellites.py  sigma.py  sun.py  surfaces.py  synthesis.py
tests/: test_engine.py  test_routing_synthesis_metrics.py  test_satellites.py  test_sigma_flow.py
