[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-substrate-os"
version = "0.1.0"
description = "Capacity-bounded detection and routing network for creator businesses"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]
